--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta property="og:image" content="https://cdn.discordapp.com/attachments/950562809421385802/964708342754848849/gifgit.gif">
+    <meta property="og:image" content="https://cdn.discordapp.com/attachments/804094727343177809/967607166171238400/hunt-showdown-wanna-play.gif">
     <meta property="og:type" content="video.other">
-    <meta property="og:video:url" content="https://www.youtube.com/embed/8i1GL-jtdx4">
+    <meta property="og:video:url" content="https://www.youtube.com/embed/rGqJK0okK3A">
     <meta property="og:video:width" content="1280">
     <meta property="og:video:height" content="720">
   </head>
